fixed colors spacing

--- a/css/style.css
+++ b/css/style.css
@@ -538,7 +538,7 @@ Works
 .og-grid {
 	list-style: none;
 	padding: 20px 0;
-	margin: 0 auto;
+	margin: -60px auto 0;
 	text-align: center;
 	width: 100%;
 }
